...
      child: Padding(
        padding: const EdgeInsets.only(
          right: 16,
          bottom: 16,
        ),
        child: FloatingActionButton(
          key: Key('addTodoBtn'),
          child: Image.asset('assets/ic_plus.png'),
          backgroundColor: AppColors.PRIMARY,
          splashColor: AppColors.PRIMARY_DARK,
          onPressed: () => bloc.onAddToDoClicked(context),
        ),
      ),
...
      child: Padding(
        padding: const EdgeInsets.only(
          left: 16,
          bottom: 16,
        ),
        child: FloatingActionButton(
          key: Key('dayBackButton'),
          heroTag: null,
          child: Image.asset('assets/ic_back_arrow.png'),
          backgroundColor: AppColors.BACKGROUND_WHITE,
          onPressed: () => bloc.onBackFABClicked(context),
        ),
      ),
...
    return Row(
      children: <Widget>[
        SizedBox(
          width: 4,
        ),
        InkWell(
          key: Key('prevDayBtn'),
          onTap: () => bloc.onPrevArrowClicked(),
          child: Padding(
            padding: const EdgeInsets.all(20),
            child: Image.asset('assets/ic_prev.png'),
          ),
        ),
...
              overflow: TextOverflow.ellipsis,
              textAlign: TextAlign.center,
            ),
          ),
        ),
        InkWell(
          key: Key('nextDayBtn'),
          onTap: () => bloc.onNextArrowClicked(),
          child: Padding(
            padding: const EdgeInsets.all(20),
            child: Image.asset('assets/ic_next.png'),
          ),
        ),
...
                      padding: const EdgeInsets.symmetric(vertical: 17, horizontal: 39),
                      child: Image.asset('assets/ic_check.png'),
                    )
                  : Padding(
                      padding: const EdgeInsets.only(right: 24),
                      child: InkWell(
                        key: Key('checkboxCompleteTask'),
                        child: Padding(
                          padding: const EdgeInsets.only(left: 14, top: 14, right: 14, bottom: 14),
                          child: Container(
                            width: 20,
                            height: 20,
                            decoration: BoxDecoration(
...
