...
    return Row(
      children: <Widget>[
        SizedBox(
          width: 4,
        ),
        InkWell(
          key: Key('prevWeekBtn'),
          onTap: () => bloc.onPrevArrowClicked(),
          child: Padding(
            padding: const EdgeInsets.all(20),
            child: Image.asset('assets/ic_prev.png'),
          ),
        ),
...
                ),
              ],
            ),
          ),
        ),
        InkWell(
          key: Key('nextWeekBtn'),
          onTap: () => bloc.onNextArrowClicked(),
          child: Padding(
            padding: const EdgeInsets.all(20),
            child: Image.asset('assets/ic_next.png'),
          ),
        ),
...
      ),
      padding: EdgeInsets.symmetric(
        vertical: 1,
        horizontal: 3,
      ),
      child: Text(
        'TODAY',
        style: TextStyle(
          color: AppColors.TEXT_WHITE,
          fontSize: 8,
        ),
        textAlign: TextAlign.center,
      ),
...
